--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,15 +1,17 @@
 $white : #ffffff;
 $black : #000000;
-$grey-bg: #C9C9C9;
-$dark-grey: #E2E0E0;
-$primary-color : #23B3E7;
-$secondary-color : #01384D;
+$grey-bg: #F4F2E7;
+$dark-grey: #111111;
+$primary-color : #E16D33;
+// $primary-color : #52b697;
+$secondary-color : #4D494A;
+$grey-d1 : #737373;
 
 $btn-border: 40px;
 $boxShadow : 0px 10px 20px rgba(0, 0, 0, 0.5);
 
-$padding-desktop : 128px;
-$padding-mobile : 24px 64px;
+$section-padding-desktop : 8px 64px;
+$section-padding-mobile : 8px 24px;
 $padding-mobile-side : 0px 16px;
 
 //Font Size
