--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import "./mixins";
 @import "./variables.scss";
 
@@ -7,6 +8,7 @@
   box-sizing: border-box;
   transition: all 300ms ease !important;
   scroll-behavior: smooth;
+  font-family: 'Montserrat Alternates', sans-serif !important;
 }
 
 html,
@@ -15,23 +17,25 @@ body {
   margin: 0 auto;
   min-height: 100vh;
   overflow-x: hidden;
-  font-family: "Red Hat Display", sans-serif !important;
-  background-color: $white;
+  overflow-y: hidden;
+  font-family: 'Montserrat Alternates', sans-serif !important;
+  transition: all 300ms ease !important;
+  background-color: $grey-bg;
   // background-color: #F6F6F6 !important;
 
   &::-webkit-scrollbar-thumb {
-    background-color: $primary-color;
+    background-color: rgba($color: $primary-color, $alpha: 1.0);
     border-radius: 0px;
-    border: 3px solid transparent;
+    border: 1px solid transparent;
     cursor: pointer;
     &:hover {
       background-color: $secondary-color;
     }
   }
   &::-webkit-scrollbar {
-    width: 8px;
+    width: 4px;
     @media screen and (max-width: 768px) {
-      width: 4px;
+      width: 2px;
     }
   }
   &::-webkit-scrollbar-track {
@@ -77,7 +81,7 @@ img {
 
 .container {
   padding: 0 8%;
-  max-width: 1500px;
+  // max-width: 1500px;
   margin: 0 auto;
 
   @media screen and (max-width: 528px) {
