--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -35,10 +35,11 @@
 		@include tablet {
 			flex-direction: column;
 			align-items: center;
+			justify-content: center;
 			padding: $section-padding-mobile;
 			min-height: calc(100vh - 81px);
 			max-height: calc(100vh - 81px);
-			padding-top: 48px;
+			// padding-top: 48px;
 		}
 
 		.imageContainer {
