--- a/src/styles/_reuseables.scss
+++ b/src/styles/_reuseables.scss
@@ -109,6 +109,10 @@
 
   transition: all 300ms ease;
 
+  -webkit-tap-highlight-color: transparent;
+  -ms-user-select: none;
+  user-select: none;
+
   &::after {
     width: 50%;
     height: 100%;
