--- a/src/styles/Layout.module.scss
+++ b/src/styles/Layout.module.scss
@@ -18,12 +18,12 @@
         margin: 0;
         border: 0;
         padding-bottom: 0px;
-		animation: slideIn 500ms 100ms ease;
+		// animation: slideIn 500ms ease;
 
-		@keyframes slideIn {
-			from {
-				transform: translateX(100vw);
-			}
-		}
+		// @keyframes slideIn {
+		// 	from {
+		// 		transform: translateX(100vw);
+		// 	}
+		// }
     }
 }
