--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,5 +1,4 @@
 @import "./variables.scss";
-@import "./mediaQuery";
 @import "./reuseables";
 
 .homepageBody {
@@ -344,24 +343,20 @@
 				display: flex;
 				gap: 12px;
 				@include tablet {
-					overflow-x: auto;
-					flex-wrap: nowrap;
+					// overflow-x: auto;
+					// flex-wrap: nowrap;
+					flex-direction: column;
 				}
 				.eachMusicCard {
 					display: flex;
 					align-items: center;
 					gap: 12px;
 					padding: 12px;
-					// min-width: 300px;
 					width: 100%;
-					max-width: 100%;
 					background: $dark-grey;
 					border: 1px solid $grey-d1;
 					border: 1px solid #737373;
 					border-radius: 20px;
-					@include tablet {
-						min-width: 80%;
-					}
 					.image {
 						min-width: 120px;
 						min-height: 120px;
@@ -378,12 +373,15 @@
 						&__top {
 							display: flex;
 							flex-direction: column;
-							// justify-content: space-between;
+							// align-content: space-between;
 							gap: 2px;
 							height: 100%;
 							// border: 1px solid #fff;
+							@include tablet {
+								margin-bottom: 8px;
+							}
 							h2 {
-								font-size: $font-size-20;
+								font-size: $font-size-16;
 							}
 							p {
 								font-size: $font-size-16 - 4px;
@@ -395,17 +393,21 @@
 							gap: 8px;
 							button {
 								@include small-button;
-								padding: 4px 12px;
+								padding: 8px 12px;
 								background-color: $white;
 								color: $primary-color;
 								border-radius: 8px;
 								border: none;
+								white-space: nowrap;
 								&:nth-child(2) {
 									background-color: $primary-color;
 									color: $white;
 									&:hover {
 										background-color: darken($color: $primary-color, $amount: 10%);
 									}
+								}
+								@include tablet {
+									padding: 8px 16px;
 								}
 							}
 						}
