--- a/src/styles/Footer.module.scss
+++ b/src/styles/Footer.module.scss
@@ -36,6 +36,7 @@
         place-items: center;
         // border: 1px solid;
         border-right: 1.5px solid $primary-color;
+        border-left: 1.5px solid $primary-color;
         img {
             width: 40px;
             height: 40px;
@@ -49,4 +50,68 @@
         align-items: center;
         gap: 8px;
     } 
+}
+
+.footerSection {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    // padding: 48px 64px; 
+    padding: $section-padding-desktop; 
+    padding-top: 52px;
+    padding-bottom: 52px;
+    background-color: $primary-color;
+    background-color: $black;
+    color: $white;
+    border-top: 8px solid $primary-color;
+    
+    @include tablet {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 32px;
+    }
+
+    &__image {
+        width: 52px;
+        height: 52px;
+        display: inline-flex;
+        // border: 1px solid #fff;
+    }
+
+    &__quickLinks {
+        h3 {
+            margin-bottom: 16px;
+        }
+        .links {
+            padding: 0;
+            list-style: none;
+            li {
+                font-size: $font-size-16 - 2px;
+                margin-bottom: 10px;
+                cursor: pointer;
+                &:hover {
+                    transform: translateX(4px);
+                    color: $primary-color;
+                }
+            }
+        }
+    }
+
+    &__socials {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        span {
+            display: inline-flex;
+            height: fit-content;
+            &:hover {
+                transform: translateY(-4px);
+            }
+            svg {
+                width: 30px;
+                height: 30px;
+            }
+        }
+    }
 }
