--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,6 +6,7 @@ $primary-color : #E16D33;
 // $primary-color : #52b697;
 $secondary-color : #4D494A;
 $grey-d1 : #737373;
+$failed-color : #DC143C;
 
 $btn-border: 40px;
 $boxShadow : 0px 10px 20px rgba(0, 0, 0, 0.5);
