--- a/src/styles/Music.module.scss
+++ b/src/styles/Music.module.scss
@@ -2,7 +2,6 @@
 @import "./reuseables";
 
 .musicPage {
-
     .topPageArea {
         height: 140px;
         width: 100%;
@@ -120,7 +119,8 @@
                     display: flex;
                     align-items: center;
                     gap: 4px;
-                    button, a {
+                    button,
+                    a {
                         @include small-button;
                         padding: 8px 16px;
                         width: fit-content;
@@ -134,6 +134,50 @@
                         &:hover {
                             color: $white;
                         }
+                    }
+                }
+            }
+        }
+
+        .eachAlbum {
+            // @extend .eachMusic;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 12px;
+            margin-bottom: 24px;
+            &__title {
+                text-align: center;
+                width: 100%;
+                .musicToggle {
+                    @include medium-button;
+                    justify-content: center;
+                    margin-top: 12px;
+                    width: 100%;
+                }
+            }
+            &__music {
+                // @extend .eachMusic;
+                background-color: $white;
+                padding: 16px;
+                border-radius: 16px;
+                width: 100%;
+                display: flex;
+                gap: 16px;
+                flex-direction: column;
+                align-items: center;
+                justify-content: space-between;
+                span {
+                    font-weight: $fontWeight-600;
+                }
+                .cta {
+                    display: flex;
+                    align-items: center;
+                    gap: 8px;
+                    a,
+                    button {
+                        @include medium-button;
+                        padding: 10px 16px;
                     }
                 }
             }
