--- a/src/styles/About.module.scss
+++ b/src/styles/About.module.scss
@@ -42,13 +42,18 @@
         }
     }
     .rhs {
-        // border: 2px solid #000;
         height: 100%;
         // min-height: 100%;
         // max-height: 100%;
         // overflow: hidden;
         &__image {
+            // border: 2px solid #000;
+            position: relative;
+            img {
+                object-fit: cover;
+            }
             width: 100%;
+            height: 710px;
 			// min-height: calc(100vh - 81px - 57.3px);
 			// max-height: calc(100vh - 81px - 57.3px);
             // border: 2px solid #000;
