--- a/src/styles/Music.module.scss
+++ b/src/styles/Music.module.scss
@@ -156,6 +156,22 @@
                     width: 100%;
                 }
             }
+            .image {
+                margin-top: 12px;
+                height: 100px;
+                width: 100%;
+                height: 160px;
+                border-radius: 8px;
+                overflow: hidden;
+                position: relative;
+                @include tablet {
+                    height: 240px;
+                    img {
+                        object-position: top;
+                        object-fit: cover;
+                    }
+                }
+            }
             &__music {
                 // @extend .eachMusic;
                 background-color: $white;
