--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -12,6 +12,10 @@
     .logo {
         width: 40px;
         height: 40px;
+        position: relative;
+        img {
+            object-fit: contain;
+        }
     }
 
     .navLinks {
@@ -66,6 +70,10 @@
         width: 48px;
         height: 48px;
         z-index: 2;
+        position: relative;
+        img {
+            object-fit: contain;
+        }
     }
 
     &__navLinksSection {
@@ -145,6 +153,10 @@
             .logo {
                 width: 48px;
                 height: 48px;
+                position: relative;
+                img {
+                    object-fit: contain;
+                }
             }
             .closeIcon {
                 svg {
