--- a/src/styles/musicInfoModal.module.scss
+++ b/src/styles/musicInfoModal.module.scss
@@ -49,6 +49,7 @@
             min-height: 260px;
             border-radius: 8px;
             overflow: hidden;
+            position: relative;
             img {
                 object-fit: cover;
             }
