--- a/src/styles/modalStyle.module.scss
+++ b/src/styles/modalStyle.module.scss
@@ -20,7 +20,7 @@
         background-color: $white;
         padding: 20px;
         border-radius: 8px;
-        min-height: 140px;
+        // min-height: 140px;
         display: flex;
         flex-direction: column;
         justify-content: center;
