--- a/src/styles/Footer.module.scss
+++ b/src/styles/Footer.module.scss
@@ -88,6 +88,11 @@
     }
 
     &__quickLinks {
+        @include tablet {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
         h3 {
             margin-bottom: 16px;
         }
@@ -103,6 +108,10 @@
                     color: $primary-color;
                 }
             }
+        }
+        button {
+            margin-top: 20px;
+            @include medium-button
         }
     }
 
