--- a/src/styles/donationModal.module.scss
+++ b/src/styles/donationModal.module.scss
@@ -96,6 +96,16 @@
                         font-size: $font-size-16 - 2px;
                         font-weight: $fontWeight-600;
                         color: $primary-color;
+                        display: flex;
+                        align-items: center;
+                        gap: 2px;
+                        svg {
+                            width: 12px;
+                            height: 12px;
+                            path {
+                                fill: $primary-color;
+                            }
+                        }
                     }
                     p {
                         font-size: $font-size-16 - 2px;
