--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -359,7 +359,7 @@
 					// flex-wrap: nowrap;
 					flex-direction: column;
 				}
-				.eachMusicCard {
+				.eachMusicCard, .albumCard {
 					display: flex;
 					align-items: center;
 					gap: 12px;
@@ -429,6 +429,19 @@
 						}
 					}
 				}
+
+                .albumCard {
+                    flex-direction: column;
+                    .image {
+						min-width: 100%;
+						min-height: 140px;
+						width: 100%;
+						height: 140px;
+                    }
+					.musicInfo {
+                        align-items: center;
+                    }
+                }
 			}
 
 			.seeMoreBtn {
